<resources>
    <string name="app_name">DailyTaskTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favourite">add favourite</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="options">options</string>
    <string name="check_task">check task\n</string>
    <string name="isim_giriniz">İsim giriniz</string>
    <string name="aciklama_giriniz">Açıklama giriniz</string>
    <string name="percentText">%1$d/%2$d</string>
    <string name="notification">Bildirimler</string>
    <string name="darkTheme">Karanlık Tema</string>
    <string name="bos_liste">boş liste</string>
    <string name="empty_list">Görev Yok. 👀</string>
    <string name="add_tasks">Biraz görev ekleyebilirsin.</string>
    <string name="first_screen_onboard">First Screen Onboard</string>
    <string name="first_screen_desc">Bu sayfadan tüm görevlerini görebilir, ilerlemeni takip edebilirsin.</string>
    <string name="second_screen_desc">Bu sayfadan görevlerini ekleyebilirsin.</string>
    <string name="third_screen_desc">Bu sayfada favoriye aldığın görevleri görebilirsin. Favoriye alınmış görevler hep burada kalır unutma :)</string>
    <string name="fourth_screen_desc">Ayarlar tuşuna bastığın zaman çıkan ayarlar sayfasından bildirimleri yönetebilir ve temayı istediğin gibi seçebilirsin.</string>
    <string name="btn_next">Sonraki</string>
    <string name="btn_previous">Önceki</string>
    <string name="btn_finish">Bitir</string>
    <string name="txt_welcome">Selam, Daily Task Tracker\'a hoşgeldin! Uygulamayı tanımak için ufak bir yolculuğa çıkalım.</string>
    <string name="daily_task_tracker">Daily Task Tracker</string>
    <string name="detail_desc">Eklediğin görevlerin üstüne tıklayarak o görev ile ilgili detaylara erişebilirsin.</string>
    <string name="detail_tutorial_screen">detail tutorial screen</string>
    <string name="second_screen_desc2">Eklenen görevler her gece 00.00\' da favori değilse silinir, unutma.</string>
</resources>