<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="200dp"
    tools:context=".view.TaskDetailFragment"
    android:background="@drawable/dialog_box_background"
    android:layout_gravity="center"
    android:gravity="center"
    android:elevation="5dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_weight="1"
    >

        <TextView
            android:id="@+id/taskNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="Lorem Ipsum"
            />
        <TextView
            android:id="@+id/taskDescDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="Lorem Ipsum"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:background="@drawable/dialog_box_background"
        >

        <ImageButton
            android:id="@+id/btnFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/add_favourite"/>

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/update"/>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/delete"/>



    </LinearLayout>

</LinearLayout>